[tool.poetry]
name = "healthcheck"
version = "0.1.0"
description = ""
authors = ["sai <oli@smail.is>"]
readme = "readme.md"

[tool.poetry.scripts]
healthcheck = "healthcheck.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
